--- a/Ejercicio3.html
+++ b/Ejercicio3.html
@@ -3,11 +3,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Student Name:" content="Jesus Alejandro Flores Sanchez">
+
     <title>Chapter6</title>
 </head>
 <body>
     <h1>Ejercicio del video 6</h1>
+    <div>
+        <p>Hola, Mundo</p>
+        <p class="error">este mensaje es para decirte que estas en el hoyo</p>
+    </div>
 
-<script src="Ejercicio1.js"></script>
+    <div class="error">este es otro mensaje para decirte que estas en el hoyo</div>
+
+<script src="Ejercicio3.js"></script>
 </body>
 </html>
