--- a/Ejercicio7.html
+++ b/Ejercicio7.html
@@ -3,11 +3,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Student Name:" content="Jesus Alejandro Flores Sanchez">
+
+    <link rel="stylesheet" href="style7.css">
     <title>Chapter6</title>
 </head>
 <body>
-    <h1>Ejercicio del video 6</h1>
+    <h1 class="title">Ejercicio del video 6</h1>
+    
+   <p>hola<span style="display: none;"> error </span> holiwis</p>
 
-<script src="Ejercicio1.js"></script>
+
+<script src="Ejercicio7.js"></script>
 </body>
 </html>
