--- a/Ejercicio5.html
+++ b/Ejercicio5.html
@@ -3,11 +3,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Student Name:" content="Jesus Alejandro Flores Sanchez">
+
     <title>Chapter6</title>
 </head>
 <body>
     <h1>Ejercicio del video 6</h1>
+   
+    <a href="https://www.youtube.com/?hl=es-419&gl=MX">Vamos a iutub</a>
 
-<script src="Ejercicio1.js"></script>
+    <p class="error">hola </p>
+
+<script src="Ejercicio5.js"></script>
 </body>
 </html>
