--- a/Ejercicio6.html
+++ b/Ejercicio6.html
@@ -3,11 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Student Name:" content="Jesus Alejandro Flores Sanchez">
+
     <title>Chapter6</title>
 </head>
 <body>
-    <h1>Ejercicio del video 6</h1>
+    <h1 style="color: rgb(255, 238, 0);">Ejercicio del video 6</h1>
 
-<script src="Ejercicio1.js"></script>
+<script src="Ejercicio6.js"></script>
 </body>
 </html>
